fixed second level menu on mobile

--- a/css/dco-theme-12-alpha-default.css
+++ b/css/dco-theme-12-alpha-default.css
@@ -133,6 +133,9 @@
   margin-bottom: 15px;
 }
 
+#region-second-level-menu ul li a {
+  display: inline;
+}
 
 
 /**************************************************
